# streamlit

./: Data.xlsx  Data_Modificado.xlsx  Datavf.xlsx  Datavf_Modificado.xlsx  Pipfile  Procfile  analysis.ipynb  analysis.py  m_KNN.pkl  m_RL.pkl  m_rf.pkl  m_svm.pkl  pyproject.toml  random_forest_tesis.py  random_forest_tesis_web.py  requeriments.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: analysis-checkpoint.ipynb
rf_tesis/: pyvenv.cfg
rf_tesis/Scripts/: activate  activate.bat  jsonpointer  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
