[tool.poetry]
name = "streamlit"
version = "0.1.0"
description = ""
authors = ["Saenz444 <nayshabermejo044@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.24.0"
pandas = "2.0.3"
numpy = "1.24.4"
seaborn = "0.12.2"
scikit-learn = "1.2.2"
matplotlib = "3.7.1"
openpyxl = "3.1.2"
protobuf = "4.21.12"
altair = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
